--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrible-Pad</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas id="drawing"></canvas>
+    <div id="toolbar">
+        <input type="color" id="colorPicker" value="#000000">
+        <input type="range" id="widthPicker" min="1" max="50" value="5">
+        <button id="clearButton">Clear</button>
+    </div>
+    <canvas id="canvas" width="400" height="400"></canvas>
+    <script type="module">
+        import initSync from "./node_modules/scrible-pad/scrible_pad.js";
+
+        // Initialize the WebAssembly module
+        initSync().then(() => {
+            console.log("WASM initialized");
+        }).catch(err => {
+            console.error("Error initializing WASM:", err);
+        });
+    </script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
