--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,8 @@
         <input type="color" id="colorPicker" value="#000000">
         <input type="range" id="widthPicker" min="1" max="50" value="5">
         <button id="clearButton">Clear</button>
+        <button id="saveButton">Save</button>
+        <button id="loadButton">Load file</button>
     </div>
     <canvas id="canvas" width="600" height="600"></canvas>
     <script type="module">
